--- a/01_UI/UI_2.1.4_Challenge1/UI_2.1.4_Challenge1/Base.lproj/Main.storyboard
+++ b/01_UI/UI_2.1.4_Challenge1/UI_2.1.4_Challenge1/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="UI_2_1_4_Challenge1" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +16,98 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PlS-U1-hRx">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="180"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mti-F0-ovf">
+                                        <rect key="frame" x="20" y="90" width="560" height="90"/>
+                                        <color key="backgroundColor" red="0.12549019607843137" green="0.12549019607843137" blue="0.12549019607843137" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" name="Helvetica-Light" family="Helvetica" pointSize="90"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.12549019610000001" green="0.12549019610000001" blue="0.12549019610000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="mti-F0-ovf" secondAttribute="bottom" id="Uqp-Us-maO"/>
+                                    <constraint firstItem="mti-F0-ovf" firstAttribute="leading" secondItem="PlS-U1-hRx" secondAttribute="leading" constant="20" id="oYM-P5-uOU"/>
+                                    <constraint firstAttribute="trailing" secondItem="mti-F0-ovf" secondAttribute="trailing" constant="20" id="qga-gj-xdA"/>
+                                    <constraint firstItem="mti-F0-ovf" firstAttribute="height" secondItem="PlS-U1-hRx" secondAttribute="height" multiplier="0.5" id="s1A-bA-PwP"/>
+                                </constraints>
+                            </view>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="JpI-o6-ZnK">
+                                <rect key="frame" x="0.0" y="180" width="450" height="420"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="RrE-Is-IE4">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="DXv-hu-K6F" customClass="NumberCell" customModule="UI_2_1_4_Challenge1" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="zji-g1-iKW">
+                                <rect key="frame" x="450" y="180" width="150" height="420"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="RZA-Xe-j49">
+                                    <size key="itemSize" width="150" height="90"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="jao-GS-hai" customClass="SymbolCell" customModule="UI_2_1_4_Challenge1" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="150" height="90"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="150" height="90"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <color key="backgroundColor" red="0.96470588235294119" green="0.50196078431372548" blue="0.070588235294117646" alpha="1" colorSpace="calibratedRGB"/>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.12549019610000001" green="0.12549019610000001" blue="0.12549019610000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="zji-g1-iKW" firstAttribute="leading" secondItem="JpI-o6-ZnK" secondAttribute="trailing" id="9Ya-dn-9as"/>
+                            <constraint firstItem="JpI-o6-ZnK" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="A1e-xS-vXI"/>
+                            <constraint firstAttribute="trailing" secondItem="PlS-U1-hRx" secondAttribute="trailing" id="AKL-Tw-cYr"/>
+                            <constraint firstItem="zji-g1-iKW" firstAttribute="leading" secondItem="JpI-o6-ZnK" secondAttribute="trailing" id="Fl4-Su-jLx"/>
+                            <constraint firstItem="PlS-U1-hRx" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Jxs-w6-13P"/>
+                            <constraint firstItem="zji-g1-iKW" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.7" id="KsX-Wl-ZBw"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="JpI-o6-ZnK" secondAttribute="bottom" id="LBz-nH-Jps"/>
+                            <constraint firstItem="JpI-o6-ZnK" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.7" id="MKR-Ny-t55"/>
+                            <constraint firstItem="zji-g1-iKW" firstAttribute="top" secondItem="PlS-U1-hRx" secondAttribute="bottom" id="MyL-kO-S6r"/>
+                            <constraint firstItem="PlS-U1-hRx" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="OqR-wm-Vou"/>
+                            <constraint firstItem="zji-g1-iKW" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.25" id="VTJ-UC-zll"/>
+                            <constraint firstItem="JpI-o6-ZnK" firstAttribute="top" secondItem="PlS-U1-hRx" secondAttribute="bottom" id="aqD-Hm-22O"/>
+                            <constraint firstItem="PlS-U1-hRx" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.3" id="cbu-c6-2j2"/>
+                            <constraint firstAttribute="trailing" secondItem="zji-g1-iKW" secondAttribute="trailing" id="iz2-X2-7Ad"/>
+                            <constraint firstItem="PlS-U1-hRx" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="ntg-fw-FCR"/>
+                            <constraint firstItem="JpI-o6-ZnK" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.75" id="o1b-s7-XXB"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="zji-g1-iKW" secondAttribute="bottom" id="paS-aY-e3s"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="displayLabel" destination="mti-F0-ovf" id="JZB-zG-E4e"/>
+                        <outlet property="numberCollectionView" destination="JpI-o6-ZnK" id="54X-9A-qyd"/>
+                        <outlet property="symbolCollectionView" destination="zji-g1-iKW" id="gb2-wT-1qn"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="305" y="418"/>
         </scene>
     </scenes>
 </document>
